--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.6.0",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "framer-motion": "^10.12.7",
     "fs": "^0.0.1-security",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
